; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/opengl/extr_vout_helper.c_vout_display_opengl_SetViewpoint.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/opengl/extr_vout_helper.c_vout_display_opengl_SetViewpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { float, i32, %struct.TYPE_10__, i32 }
%struct.TYPE_10__ = type { i32 }
%struct.TYPE_12__ = type { float }

@FIELD_OF_VIEW_DEGREES_MAX = common dso_local global float 0.000000e+00, align 4
@FIELD_OF_VIEW_DEGREES_MIN = common dso_local global float 0.000000e+00, align 4
@VLC_EBADVAR = common dso_local global i32 0, align 4
@M_PI = common dso_local global i64 0, align 8
@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vout_display_opengl_SetViewpoint(%struct.TYPE_11__* %0, %struct.TYPE_12__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_11__*, align 8
  %5 = alloca %struct.TYPE_12__*, align 8
  %6 = alloca float, align 4
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %4, align 8
  store %struct.TYPE_12__* %1, %struct.TYPE_12__** %5, align 8
  %7 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %8 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %7, i32 0, i32 0
  %9 = load float, float* %8, align 4
  %10 = load float, float* @FIELD_OF_VIEW_DEGREES_MAX, align 4
  %11 = fcmp ogt float %9, %10
  br i1 %11, label %18, label %12

12:                                               ; preds = %2
  %13 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %13, i32 0, i32 0
  %15 = load float, float* %14, align 4
  %16 = load float, float* @FIELD_OF_VIEW_DEGREES_MIN, align 4
  %17 = fcmp olt float %15, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %12, %2
  %19 = load i32, i32* @VLC_EBADVAR, align 4
  store i32 %19, i32* %3, align 4
  br label %58

20:                                               ; preds = %12
  %21 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %21, i32 0, i32 0
  %23 = load float, float* %22, align 4
  %24 = load i64, i64* @M_PI, align 8
  %25 = sitofp i64 %24 to float
  %26 = fmul float %23, %25
  %27 = fdiv float %26, 1.800000e+02
  store float %27, float* %6, align 4
  %28 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %28, i32 0, i32 3
  %30 = load %struct.TYPE_12__*, %struct.TYPE_12__** %5, align 8
  %31 = call i32 @vlc_viewpoint_reverse(i32* %29, %struct.TYPE_12__* %30)
  %32 = load float, float* %6, align 4
  %33 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %34 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %33, i32 0, i32 0
  %35 = load float, float* %34, align 4
  %36 = fsub float %32, %35
  %37 = call float @llvm.fabs.f32(float %36)
  %38 = fcmp oge float %37, 0x3F50624DE0000000
  br i1 %38, label %39, label %47

39:                                               ; preds = %20
  %40 = load float, float* %6, align 4
  %41 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %42 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %41, i32 0, i32 0
  store float %40, float* %42, align 4
  %43 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %44 = call i32 @UpdateFOVy(%struct.TYPE_11__* %43)
  %45 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %46 = call i32 @UpdateZ(%struct.TYPE_11__* %45)
  br label %47

47:                                               ; preds = %39, %20
  %48 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %49 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %50 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %49, i32 0, i32 2
  %51 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %50, i32 0, i32 0
  %52 = load i32, i32* %51, align 4
  %53 = load %struct.TYPE_11__*, %struct.TYPE_11__** %4, align 8
  %54 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %53, i32 0, i32 1
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @getViewpointMatrixes(%struct.TYPE_11__* %48, i32 %52, i32 %55)
  %57 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %57, i32* %3, align 4
  br label %58

58:                                               ; preds = %47, %18
  %59 = load i32, i32* %3, align 4
  ret i32 %59
}

declare dso_local i32 @vlc_viewpoint_reverse(i32*, %struct.TYPE_12__*) #1

; Function Attrs: nounwind readnone speculatable willreturn
declare float @llvm.fabs.f32(float) #2

declare dso_local i32 @UpdateFOVy(%struct.TYPE_11__*) #1

declare dso_local i32 @UpdateZ(%struct.TYPE_11__*) #1

declare dso_local i32 @getViewpointMatrixes(%struct.TYPE_11__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
